--- a/index.html
+++ b/index.html
@@ -55,14 +55,20 @@
   .card-reel.is-appearing{opacity:0;transform:translateY(6px)}
   .card-reel.is-appearing.show{opacity:1;transform:none}
 
-  /* Video / thumbnail — ahora con relación variable */
-  .media{position:relative;background:#000;aspect-ratio:var(--ar, 9/16);border-bottom:1px solid #eee}
+  /* Video / thumbnail — relación variable + bordes y overflow */
+  .media{
+    position:relative;background:#000;aspect-ratio:var(--ar, 9/16);
+    border-bottom:1px solid #eee;border-radius:12px 12px 0 0;overflow:hidden;
+  }
   .media iframe{position:absolute;inset:0;width:100%;height:100%;border:0;display:block;transform:none!important}
 
   /* Skeleton */
-  .media .skeleton{position:absolute;inset:0;border-radius:8px;
+  .media .skeleton{
+    position:absolute;inset:0;border-radius:8px;
     background:linear-gradient(90deg,#1f2937 0%,#374151 50%,#1f2937 100%);
-    background-size:200% 100%;animation:shine 1.1s linear infinite}
+    background-size:200% 100%;animation:shine 1.1s linear infinite;
+    pointer-events:none; /* no bloquear toques */
+  }
   @keyframes shine{0%{background-position:0% 0}100%{background-position:200% 0}}
   .media.loaded .skeleton{opacity:0;pointer-events:none;transition:opacity .25s}
 
@@ -103,16 +109,31 @@
 
   /* ===== Ajustes MÓVIL: videos más chicos ===== */
   @media (max-width:639px){
-    .card-reel{ --ar: 9/13; }          /* menos alto que 9/16 */
+    .card-reel{ --ar: 9/13; }
     .reels-wrap{ padding:0 12px; }
     .desc{ font-size:13px; }
     .btn-more{ padding:6px 10px; font-size:13px; }
   }
-  /* Ultra-chico: aún más bajos */
   @media (max-width:400px){
-    .card-reel{ --ar: 9/12; }          /* baja un poco más la altura */
+    .card-reel{ --ar: 9/12; }
+  }
+
+  /* --- Botón AMPLIAR solo en móvil (no cubre el video) --- */
+  .media .tap-open{
+    position:absolute; right:8px; top:8px; display:none;
+    border:0; background:transparent; z-index:4; cursor:pointer; touch-action:manipulation; padding:0;
+  }
+  .media .tap-open .badge{
+    width:36px; height:36px; display:inline-flex; align-items:center; justify-content:center;
+    border-radius:10px; background:rgba(0,0,0,.45);
+    border:1px solid rgba(255,255,255,.35); color:#fff; box-shadow:0 6px 12px rgba(0,0,0,.25);
+  }
+  .media .tap-open .badge .fa{ font-size:14px; }
+  @media (max-width:639px){
+    .media .tap-open{ display:inline-flex; }
   }
 </style>
+
 
 </head>
 
@@ -916,117 +937,132 @@
     })();
   </script>
 
-  <!-- ==== Mejora de tarjetas + Modal (ENABLE_ACTIONS desactivado) ==== -->
-  <script>
-    (function () {
-      const ENABLE_ACTIONS = false;
-      const $ = (s, ctx = document) => ctx.querySelector(s);
-      const $$ = (s, ctx = document) => Array.from(ctx.querySelectorAll(s));
-      const favKey = 'reel_favs';
+<!-- ==== Mejora de tarjetas + Modal (ENABLE_ACTIONS desactivado) ==== -->
+<script>
+  (function () {
+    const ENABLE_ACTIONS = false;
+    const $ = (s, ctx = document) => ctx.querySelector(s);
+    const $$ = (s, ctx = document) => Array.from(ctx.querySelectorAll(s));
+    const favKey = 'reel_favs';
 
-      function getIframeSrc(ifr){ return ifr?.getAttribute('src') || ifr?.dataset?.src || ''; }
-      function addOrReplaceParams(url, params){
-        try{ const u = new URL(url);
-          Object.entries(params).forEach(([k,v]) => v==null ? u.searchParams.delete(k) : u.searchParams.set(k,v));
-          return u.toString();
-        }catch{ return url; }
-      }
-      function getOriginalLinkFromIframe(ifr){
-        const src = getIframeSrc(ifr);
-        try{
-          const u = new URL(src);
-          const href = u.searchParams.get('href');
-          return href ? decodeURIComponent(href) : '';
-        }catch{ return ''; }
-      }
+    function getIframeSrc(ifr){ return ifr?.getAttribute('src') || ifr?.dataset?.src || ''; }
+    function addOrReplaceParams(url, params){
+      try{ const u = new URL(url);
+        Object.entries(params).forEach(([k,v]) => v==null ? u.searchParams.delete(k) : u.searchParams.set(k,v));
+        return u.toString();
+      }catch{ return url; }
+    }
+    function getOriginalLinkFromIframe(ifr){
+      const src = getIframeSrc(ifr);
+      try{
+        const u = new URL(src);
+        const href = u.searchParams.get('href');
+        return href ? decodeURIComponent(href) : '';
+      }catch{ return ''; }
+    }
 
-      function enhanceCards(scope = document){
-        $$('.card-reel', scope).forEach((card, idx) => {
-          if (card.dataset.enhanced) return;
-          card.dataset.enhanced = '1';
+    function enhanceCards(scope = document){
+      $$('.card-reel', scope).forEach((card, idx) => {
+        if (card.dataset.enhanced) return;
+        card.dataset.enhanced = '1';
 
-          // Skeleton
-          const media = $('.media', card);
-          if (media && !$('.skeleton', media)) {
-            const sk = document.createElement('div');
-            sk.className = 'skeleton';
-            media.appendChild(sk);
-          }
-          const ifr = $('iframe', media);
-          if (ifr) ifr.addEventListener('load', () => media.classList.add('loaded'), { once: true });
+        // Skeleton
+        const media = $('.media', card);
+        if (media && !$('.skeleton', media)) {
+          const sk = document.createElement('div');
+          sk.className = 'skeleton';
+          media.appendChild(sk);
+        }
+        const ifr = $('iframe', media);
+        if (ifr) ifr.addEventListener('load', () => media.classList.add('loaded'), { once: true });
 
-          if (ENABLE_ACTIONS) {
-            const actions = document.createElement('div');
-            actions.className = 'r-actions';
-            actions.innerHTML = `
-              <button class="icon-btn fav"   title="Favorito"      aria-label="Favorito"><i class="fa fa-heart"></i></button>
-              <button class="icon-btn open"  title="Ampliar"       aria-label="Ampliar"><i class="fa fa-expand"></i></button>
-              <button class="icon-btn copy"  title="Copiar enlace" aria-label="Copiar enlace"><i class="fa fa-link"></i></button>`;
-            media.appendChild(actions);
+        // --- Botón AMPLIAR (móvil), no cubre el video ---
+        if (media && !media.querySelector('.tap-open')) {
+          const tap = document.createElement('button');
+          tap.className = 'tap-open';
+          tap.setAttribute('aria-label', 'Ampliar video');
+          tap.innerHTML = '<span class="badge"><i class="fa fa-expand"></i></span>';
+          media.appendChild(tap);
 
-            const id = card.dataset.id || ('reel-' + idx);
-            card.dataset.id = id;
+          tap.addEventListener('click', () => {
+            const src = getIframeSrc(ifr);
+            if (!src) return;
+            // Solo abre modal al tocar el botón, NO al tocar el video
+            openModal(addOrReplaceParams(src, { autoplay: '1', mute: '1', show_text: 'false' }));
+          });
+        }
 
-            const favBtn = actions.querySelector('.fav');
-            const favSet = new Set(JSON.parse(localStorage.getItem(favKey) || '[]'));
-            if (favSet.has(id)) favBtn.classList.add('on');
-            favBtn.addEventListener('click', () => {
-              const set = new Set(JSON.parse(localStorage.getItem(favKey) || '[]'));
-              if (set.has(id)) { set.delete(id); favBtn.classList.remove('on'); }
-              else { set.add(id); favBtn.classList.add('on'); }
-              localStorage.setItem(favKey, JSON.stringify([...set]));
-            });
+        if (ENABLE_ACTIONS) {
+          const actions = document.createElement('div');
+          actions.className = 'r-actions';
+          actions.innerHTML = `
+            <button class="icon-btn fav"   title="Favorito"      aria-label="Favorito"><i class="fa fa-heart"></i></button>
+            <button class="icon-btn open"  title="Ampliar"       aria-label="Ampliar"><i class="fa fa-expand"></i></button>
+            <button class="icon-btn copy"  title="Copiar enlace" aria-label="Copiar enlace"><i class="fa fa-link"></i></button>`;
+          media.appendChild(actions);
 
-            const openBtn = actions.querySelector('.open');
-            openBtn.addEventListener('click', () => {
-              const src = getIframeSrc(ifr);
-              if (!src) return;
-              openModal(addOrReplaceParams(src, { autoplay: '1', mute: '1', show_text: 'false' }));
-            });
+          const id = card.dataset.id || ('reel-' + idx);
+          card.dataset.id = id;
 
-            const copyBtn = actions.querySelector('.copy');
-            copyBtn.addEventListener('click', async () => {
-              const link = getOriginalLinkFromIframe(ifr);
-              if (!link) return alert('No se pudo obtener el enlace.');
-              try { await navigator.clipboard.writeText(link); copyBtn.style.opacity = .6; setTimeout(() => copyBtn.style.opacity = 1, 450); }
-              catch { alert('Copia falló; intenta manualmente: ' + link); }
-            });
-          }
-        });
-      }
-      window.__enhanceCards = enhanceCards;
-      enhanceCards();
+          const favBtn = actions.querySelector('.fav');
+          const favSet = new Set(JSON.parse(localStorage.getItem(favKey) || '[]'));
+          if (favSet.has(id)) favBtn.classList.add('on');
+          favBtn.addEventListener('click', () => {
+            const set = new Set(JSON.parse(localStorage.getItem(favKey) || '[]'));
+            if (set.has(id)) { set.delete(id); favBtn.classList.remove('on'); }
+            else { set.add(id); favBtn.classList.add('on'); }
+            localStorage.setItem(favKey, JSON.stringify([...set]));
+          });
 
-      // Aparición suave al hacer scroll (mejora visual en móviles también)
-      const ap = new IntersectionObserver((entries)=>{
-        entries.forEach(e=>{
-          if(e.isIntersecting){ e.target.classList.add('show'); ap.unobserve(e.target); }
-        })
-      },{threshold:.12});
-      document.querySelectorAll('.card-reel.is-appearing').forEach(el=>ap.observe(el));
+          const openBtn = actions.querySelector('.open');
+          openBtn.addEventListener('click', () => {
+            const src = getIframeSrc(ifr);
+            if (!src) return;
+            openModal(addOrReplaceParams(src, { autoplay: '1', mute: '1', show_text: 'false' }));
+          });
 
-      // Modal global
-      const modal = document.getElementById('reelModal');
-      const modalIframe = document.getElementById('modalIframe');
-      const modalClose = document.getElementById('modalClose');
+          const copyBtn = actions.querySelector('.copy');
+          copyBtn.addEventListener('click', async () => {
+            const link = getOriginalLinkFromIframe(ifr);
+            if (!link) return alert('No se pudo obtener el enlace.');
+            try { await navigator.clipboard.writeText(link); copyBtn.style.opacity = .6; setTimeout(() => copyBtn.style.opacity = 1, 450); }
+            catch { alert('Copia falló; intenta manualmente: ' + link); }
+          });
+        }
+      });
+    }
+    window.__enhanceCards = enhanceCards;
+    enhanceCards();
 
-      function openModal(src){
-        modalIframe.src = src;
-        modal.classList.add('open');
-        modal.setAttribute('aria-hidden', 'false');
-      }
-      function closeModal(){
-        modal.classList.remove('open');
-        modal.setAttribute('aria-hidden', 'true');
-        modalIframe.src = 'about:blank';
-      }
-      window.openModal = openModal;
-      modalClose.addEventListener('click', closeModal);
-      modal.addEventListener('click', (e) => { if (e.target === modal) closeModal(); });
-      window.addEventListener('keydown', (e) => { if (e.key === 'Escape' && modal.classList.contains('open')) closeModal(); });
-    })();
-  </script>
+    // Aparición suave
+    const ap = new IntersectionObserver((entries)=>{
+      entries.forEach(e=>{
+        if(e.isIntersecting){ e.target.classList.add('show'); ap.unobserve(e.target); }
+      })
+    },{threshold:.12});
+    document.querySelectorAll('.card-reel.is-appearing').forEach(el=>ap.observe(el));
+
+    // Modal global
+    const modal = document.getElementById('reelModal');
+    const modalIframe = document.getElementById('modalIframe');
+    const modalClose = document.getElementById('modalClose');
+
+    function openModal(src){
+      modalIframe.src = src;
+      modal.classList.add('open');
+      modal.setAttribute('aria-hidden', 'false');
+    }
+    function closeModal(){
+      modal.classList.remove('open');
+      modal.setAttribute('aria-hidden', 'true');
+      modalIframe.src = 'about:blank';
+    }
+    window.openModal = openModal;
+    modalClose.addEventListener('click', closeModal);
+    modal.addEventListener('click', (e) => { if (e.target === modal) closeModal(); });
+    window.addEventListener('keydown', (e) => { if (e.key === 'Escape' && modal.classList.contains('open')) closeModal(); });
+  })();
+</script>
+
 </body>
-
 </html>
-
